@@ -1,1 +1,3 @@
 For this repo this is base branch
+VM arguments:
+--add-opens java.base/java.util=ALL-UNNAMED
